using Microsoft.AspNetCore.Identity;
using System.ComponentModel.DataAnnotations;

namespace ApplicationNamePlaceholder.BusinessLogic.Entities;

public class ApplicationUser : IdentityUser<Guid>
{
    public ICollection<ApplicationUserRole> ApplicationUserRoles { get; set; } = [];
    public ApplicationUser? ApplicationUserUpdatedBy { get; set; }
    public ICollection<ApplicationRole> UpdatedApplicationRoles { get; set; } = [];
    public ICollection<ApplicationRoleClaim> UpdatedApplicationRoleClaims { get; set; } = [];
    public ICollection<ApplicationUser> UpdatedApplicationUsers { get; set; } = [];
    public ICollection<ApplicationUserClaim> UpdatedApplicationUserClaims { get; set; } = [];
    public ICollection<ApplicationUserLogin> UpdatedApplicationUserLogins { get; set; } = [];
    public ICollection<ApplicationUserRole> UpdatedApplicationUserRoles { get; set; } = [];
    public ICollection<ApplicationUserToken> UpdatedApplicationUserTokens { get; set; } = [];

    public ICollection<Card> UpdatedCards { get; set; } = [];
    public ICollection<CardFoundation> UpdatedCardFoundations { get; set; } = [];
    public ICollection<CardStock> UpdatedCardStocks { get; set; } = [];
    public ICollection<CardTableau> UpdatedCardTableaus { get; set; } = [];
    public ICollection<CardWaste> UpdatedCardWastes { get; set; } = [];
    public ICollection<Foundation> UpdatedFoundations { get; set; } = [];
    public ICollection<Game> UpdatedGames { get; set; } = [];
    public ICollection<Move> UpdatedMoves { get; set; } = [];
    public ICollection<PileType> UpdatedPileTypes { get; set; } = [];
    public ICollection<Player> UpdatedPlayers { get; set; } = [];
    public ICollection<Player> Player { get; set; } = [];
    public ICollection<Puzzle> UpdatedPuzzles { get; set; } = [];
    public ICollection<Rank> UpdatedRanks { get; set; } = [];
    public ICollection<Status> UpdatedStatuses { get; set; } = [];
    public ICollection<Suit> UpdatedSuits { get; set; } = [];
    public ICollection<Tableau> UpdatedTableaus { get; set; } = [];
    // ActualPropertyPlaceholder
}
