using System.ComponentModel.DataAnnotations;

namespace ApplicationNamePlaceholder.BusinessLogic.Entities;

public class PileType
{
    public ApplicationUser? ApplicationUserUpdatedBy { get; set; }
    public Guid Id { get; set; }

    public string Name { get; set; } = string.Empty;
    public ICollection<Move> MovesFromPileType { get; set; } = [];
    public ICollection<Move> MovesToPileType { get; set; } = [];
    // ActualPropertyPlaceholder
}
