@startuml

entity ApplicationRole {
    Id : Guid
    --
    ApplicationUserRoles : ICollection<ApplicationUserRole>
    ApplicationUserUpdatedBy : ApplicationUser
    --
    ConcurrencyStamp : string
    Name : string
    NormalizedName : string
}

entity ApplicationRoleClaim {
    Id : int
    --
    ApplicationUserUpdatedBy : ApplicationUser
    RoleId : Guid
    --
    ClaimType : string
    ClaimValue : string
}

entity ApplicationUser {
    Id : Guid
    --
    ApplicationUserRoles : ICollection<ApplicationUserRole>
    ApplicationUserUpdatedBy : ApplicationUser
    UpdatedApplicationRoles : ICollection<ApplicationRole>
    UpdatedApplicationRoleClaims : ICollection<ApplicationRoleClaim>
    UpdatedApplicationUsers : ICollection<ApplicationUser>
    UpdatedApplicationUserClaims : ICollection<ApplicationUserClaim>
    UpdatedApplicationUserLogins : ICollection<ApplicationUserLogin>
    UpdatedApplicationUserRoles : ICollection<ApplicationUserRole>
    UpdatedApplicationUserTokens : ICollection<ApplicationUserToken>
    UpdatedCards : ICollection<Card>
    UpdatedCardFoundations : ICollection<CardFoundation>
    UpdatedCardStocks : ICollection<CardStock>
    UpdatedCardTableaus : ICollection<CardTableau>
    UpdatedCardWastes : ICollection<CardWaste>
    UpdatedFoundations : ICollection<Foundation>
    UpdatedGames : ICollection<Game>
    UpdatedMoves : ICollection<Move>
    UpdatedPileTypes : ICollection<PileType>
    UpdatedPlayers : ICollection<Player>
    Player : ICollection<Player>
    UpdatedPuzzles : ICollection<Puzzle>
    UpdatedRanks : ICollection<Rank>
    UpdatedStatuses : ICollection<Status>
    UpdatedSuits : ICollection<Suit>
    UpdatedTableaus : ICollection<Tableau>
    ' ApplicationUserKeyCodePlaceholder
    --
    AccessFailedCount : int
    ConcurrencyStamp : string
    Email : string
    EmailConfirmed : bool
    LockoutEnabled : bool
    LockoutEnd : DateTimeOffset
    NormalizedEmail : string
    NormalizedUserName : string
    PasswordHash : string
    PhoneNumber : string
    PhoneNumberConfirmed : bool
    SecurityStamp : string
    TwoFactorEnabled: bool
    UserName : string
}

entity ApplicationUserClaim {
    Id : int
    --
    ApplicationUserUpdatedBy : ApplicationUser
    UserId : Guid
    --
    ClaimType : string
    ClaimValue : string
}

entity ApplicationUserLogin {
    --
    ApplicationUserUpdatedBy : ApplicationUser
    UserId : Guid
    --
    LoginProvider
    ProviderDisplayName
    ProviderKey
}

entity ApplicationUserRole {
    --
    ApplicationRole : ApplicationRole
    ApplicationUser : ApplicationUser
    ApplicationUserUpdatedBy : ApplicationUser
    RoleId : Guid
    UserId : Guid
    --
}

entity ApplicationUserToken {
    --
    ApplicationUserUpdatedBy : ApplicationUser
    UserId : Guid
    --
    LoginProvider : string
    Name : string
    Value : string
}

entity Card {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    RankId : Rank
    SuitId : Suit
    CardFoundations : ICollection<CardFoundation>
    CardStocks : ICollection<CardStock>
    CardTableaus : ICollection<CardTableau>
    CardWastes : ICollection<CardWaste>
    MovesAsCard1 : ICollection<Move>
    MovesAsCard2 : ICollection<Move>
    MovesAsCard3 : ICollection<Move>
    ' CardKeyCodePlaceholder
    --
    ' CardPropertyCodePlaceholder
}

entity CardFoundation {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    Card : Card
    Foundation : Foundation
    ' CardFoundationKeyCodePlaceholder
    --
    Ordering : int
    ' CardFoundationPropertyCodePlaceholder
}

entity CardStock {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    CardId : Card
    GameId : Game
    PuzzleId : Puzzle
    ' CardStockKeyCodePlaceholder
    --
    Ordering : int
    ' CardStockPropertyCodePlaceholder
}

entity CardTableau {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    CardId : Card
    TableauId : Tableau
    ' CardTableauKeyCodePlaceholder
    --
    Ordering : int
    ' CardTableauPropertyCodePlaceholder
}

entity CardWaste {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    CardId : Card
    GameId : Game
    PuzzleId : Puzzle
    ' CardWasteKeyCodePlaceholder
    --
    Ordering : int
    ' CardWastePropertyCodePlaceholder
}

entity Foundation {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    GameId : Game
    PuzzleId : Puzzle
    SuitId : Suit
    CardFoundations : ICollection<CardFoundation>
    ' FoundationKeyCodePlaceholder
    --
    PileIndex : int
    ' FoundationPropertyCodePlaceholder
}

entity Game {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    PlayerId : Player
    PuzzleId : Puzzle
    StatusId : Status
    CardStocks : ICollection<CardStock>
    CardWastes : ICollection<CardWaste>
    Foundations : ICollection<Foundation>
    Moves : ICollection<Move>
    Tableaus : ICollection<Tableau>
    ' GameKeyCodePlaceholder
    --
    EndTime : DateTime
    StartTime : DateTime
    ' GamePropertyCodePlaceholder
}

entity Move {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    Card1Id : Card
    Card2Id : Card
    Card3Id : Card
    FromPileTypeId : PileType
    GameId : Game
    ToPileTypeId : PileType
    ' MoveKeyCodePlaceholder
    --
    FromPileIndex : int
    MoveTime : DateTime
    ToPileIndex : int
    ' MovePropertyCodePlaceholder
}

entity PileType {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    MovesFromPileType : ICollection<Move>
    MovesToPileType : ICollection<Move>
    ' PileTypeKeyCodePlaceholder
    --
    Name : string
    ' PileTypePropertyCodePlaceholder
}

entity Player {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    ApplicationUserId : ApplicationUser
    Games : ICollection<Game>
    Puzzles : ICollection<Puzzle>
    ' PlayerKeyCodePlaceholder
    --
    ' PlayerPropertyCodePlaceholder
}

entity Puzzle {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    CreatorId : Player
    CardStocks : ICollection<CardStock>
    CardWastes : ICollection<CardWaste>
    Foundations : ICollection<Foundation>
    Games : ICollection<Game>
    Tableaus : ICollection<Tableau>
    ' PuzzleKeyCodePlaceholder
    --
    Description : string
    IsPublic : bool
    Name : string
    PublishTime : DateTime
    ' PuzzlePropertyCodePlaceholder
}

entity Rank {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    Cards : ICollection<Card>
    ' RankKeyCodePlaceholder
    --
    ' RankPropertyCodePlaceholder
}

entity Status {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    Games : ICollection<Game>
    ' StatusKeyCodePlaceholder
    --
    Name : string
    ' StatusPropertyCodePlaceholder
}

entity Suit {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    Cards : ICollection<Card>
    Foundations : ICollection<Foundation>
    ' SuitKeyCodePlaceholder
    --
    Code : string
    Name : string
    ' SuitPropertyCodePlaceholder
}

entity Tableau {
    Id : Guid
    --
    ApplicationUserUpdatedBy : ApplicationUser
    GameId : Game
    PuzzleId : Puzzle
    CardTableaus : ICollection<CardTableau>
    ' TableauKeyCodePlaceholder
    --
    PileIndex : int
    ' TableauPropertyCodePlaceholder
}

' EntityCodePlaceholder

ApplicationRole ||--o{ ApplicationUserRole
ApplicationRole }o--|| ApplicationUser
ApplicationRoleClaim }o--|| ApplicationRole
ApplicationRoleClaim }o--|| ApplicationUser
ApplicationUser }o--|| ApplicationUser
ApplicationUser ||--o{ ApplicationUserRole
ApplicationUserClaim }o--|| ApplicationUser
ApplicationUserLogin }o--|| ApplicationUser
ApplicationUserRole }o--|| ApplicationUser
ApplicationUserToken }o--|| ApplicationUser

Card }o--|| ApplicationUser
Card }o--|| Rank
Card }o--|| Suit
CardFoundation }o--|| ApplicationUser
CardFoundation }o--|| Card
CardFoundation }o--|| Foundation
CardStock }o--|| ApplicationUser
CardStock }o--|| Card
CardStock }o--|| Game
CardStock }o--|| Puzzle
CardTableau }o--|| ApplicationUser
CardTableau }o--|| Card
CardTableau }o--|| Tableau
CardWaste }o--|| ApplicationUser
CardWaste }o--|| Card
CardWaste }o--|| Game
CardWaste }o--|| Puzzle
Foundation }o--|| ApplicationUser
Foundation }o--|| Game
Foundation }o--|| Puzzle
Foundation }o--|| Suit
Game }o--|| ApplicationUser
Game }o--|| Player
Game }o--|| Puzzle
Game }o--|| Status
Move }o--|| ApplicationUser
Move }o--|| Card
Move }o--|| Card
Move }o--|| Card
Move }o--|| PileType
Move }o--|| Game
Move }o--|| PileType
PileType }o--|| ApplicationUser
Player }o--|| ApplicationUser
Player }o--|| ApplicationUser
Puzzle }o--|| ApplicationUser
Puzzle }o--|| Player
Rank }o--|| ApplicationUser
Status }o--|| ApplicationUser
Suit }o--|| ApplicationUser
Tableau }o--|| ApplicationUser
Tableau }o--|| Game
Tableau }o--|| Puzzle
' RelationshipCodePlaceholder

@enduml
